--- a/default.conf
+++ b/default.conf
@@ -2,7 +2,7 @@ server {
     listen       80;
 
     location / {
-        proxy_pass http://web/;
+        proxy_pass http://web-container/;
     }
 
     # redirect server error pages to the static page /50x.html
